<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#EEEEEE"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:elevation="@dimen/elevation_margin"
        app:cardCornerRadius="@dimen/corner_radius_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivIcon"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_image"
                android:contentDescription="@string/image"
                android:scaleType="centerCrop"
                android:src="@drawable/treeservice"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvServiceTitle"
                android:layout_width="@dimen/width_element"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_element"
                android:layout_marginTop="@dimen/margin_top_element"
                android:layout_marginEnd="@dimen/margin_end_element"
                android:text="@string/service_title"
                android:textColor="@color/black"
                android:textSize="@dimen/service_title_element"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivIcon" />

            <TextView
                android:id="@+id/tvServiceDescription"
                android:layout_width="@dimen/width_element"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_element"
                android:layout_marginTop="@dimen/margin_top_element"
                android:layout_marginEnd="@dimen/margin_end_element"
                android:text="@string/description"
                android:textSize="@dimen/general_size_element"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvServiceTitle" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="@dimen/width_element"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_element"
                android:layout_marginTop="@dimen/margin_top_element"
                android:layout_marginEnd="@dimen/margin_end_element"
                android:text="@string/duration"
                android:textSize="@dimen/general_size_element"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvServiceDescription" />

            <TextView
                android:id="@+id/tvDuration"
                android:layout_width="@dimen/width_element"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_element"
                android:layout_marginTop="@dimen/margin_top_element"
                android:layout_marginEnd="@dimen/margin_end_element"
                android:layout_marginBottom="@dimen/margin_bottom_element"
                android:textColor="@color/black"
                android:textSize="@dimen/general_size_element"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPrice"
                tools:text="@string/price" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
